fix: navigation tab text wrapping

--- a/src/components/navigation/z-navigation-tab/styles.css
+++ b/src/components/navigation/z-navigation-tab/styles.css
@@ -13,6 +13,7 @@ button {
   font-family: inherit;
   line-height: inherit;
   letter-spacing: inherit;
+  white-space: nowrap;
   color: var(--color-primary01);
   fill: currentColor;
   border: none;
